# Combinatorial-Circuits-Simulator

./: AndGate.h  CMakeLists.txt  Gate.cpp  Gate.h  InputGate.cpp  Makefile  NandGate.h  NegateGate.h  NorGate.h  OrGate.cpp  OrGate.h  OutputGate.cpp  OutputGate.h  README.md  UnaryGate.h  XorGate.cpp  XorGate.h  main.cpp
Gates/: BinaryGate.cpp  BinaryGate.h  Gate.cpp  Gate.h  InputGate.cpp  InputGate.h  OutputGate.cpp  OutputGate.h  UnaryGate.cpp  UnaryGate.h
Gates/BinaryGates/: AndGate.cpp  AndGate.h  NandGate.cpp  NandGate.h  NorGate.cpp  NorGate.h  NxorGate.cpp  NxorGate.h  OrGate.cpp  OrGate.h  XorGate.cpp  XorGate.h
Gates/UnaryGates/: NegateGate.cpp  NegateGate.h
saved-circuits/: circuit-F.txt  circuit-H.txt  circuit-Z.txt
